load(
    "@com_google_upb//bazel:upb_proto_library.bzl",
    "upb_fasttable_enabled",
    "upb_proto_library",
    "upb_proto_reflection_library",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "a",
    srcs = ["a.cc"],
    deps = [
        ":c_upb_proto",
        ":c_upb_proto_reflection",
    ],
)

proto_library(
    name = "c_proto",
    srcs = ["c.proto"],
    cc_api_version = 2,
)

upb_proto_library(
    name = "c_upb_proto",
    deps = [":c_proto"],
)

upb_proto_reflection_library(
    name = "c_upb_proto_reflection",
    deps = [":c_proto"],
)

upb_fasttable_enabled(
    name = "fasttable_enabled",
    build_setting_default = False,
)
