load(
    "@com_google_protobuf//bazel:upb_proto_library.bzl",
    "upb_proto_library",
    "upb_proto_reflection_library",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "a",
    srcs = ["a.cc"],
    deps = [
        ":c_upb_proto",
        ":c_upb_proto_reflection",
    ],
)

proto_library(
    name = "c_proto",
    srcs = ["c.proto"],
    cc_api_version = 2,
)

proto_library(
    name = "d_proto",
    srcs = ["d.proto"],
    cc_api_version = 2,
)

proto_library(
    name = "abc_protos",
    deps = [
        ":c_proto",
        ":d_proto",
    ],
)

upb_proto_library(
    name = "c_upb_proto",
    deps = [":c_proto"],
)

upb_proto_reflection_library(
    name = "c_upb_proto_reflection",
    deps = [":c_proto"],
)

cc_proto_library(
    name = "abc_protos_cc",
    deps = [":abc_protos"],
)

upb_proto_library(
    name = "abc_protos_upb",
    deps = [":abc_protos"],
)

upb_proto_reflection_library(
    name = "abc_protos_upbdefs",
    deps = [":abc_protos"],
)
