package(default_visibility = ["//visibility:private"])

proto_library(
    name = "z_proto",
    srcs = ["z.proto"],
)

genrule(
    name = "make_y",
    outs = ["y.h"],
    cmd = "$(location //:b_binary) $@ ",
    tools = ["//:b_binary"],
)

genrule(
    name = "make_ycc",
    outs = ["y.cc"],
    cmd = "$(location //:b_binary) $@ ",
    tools = ["//:b_binary"],
)

cc_library(
    name = "y",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
)

cc_library(
    name = "no_hdrs",
    srcs = [
        "y.cc",
        "y.h",
    ],
)

cc_library(
    name = "strip_include_prefix_subdir",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
    strip_include_prefix = "/subdir",
)

cc_library(
    name = "include_prefix_subdir",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
    include_prefix = "subdir",
)

cc_library(
    name = "includes_dot",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
    includes = ["."],
)

cc_library(
    name = "linkstatic",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
    linkstatic = True,
)

cc_library(
    name = "linkstatic_header_only",
    hdrs = ["y.h"],
    linkstatic = True,
    deps = [":y"],
)

cc_library(
    name = "alwayslink",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
    alwayslink = True,
)

cc_library(
    name = "alwayslink_linkstatic",
    srcs = ["y.cc"],
    hdrs = ["y.h"],
    linkstatic = True,
    alwayslink = True,
)

cc_library(
    name = "alwayslink_header_only",
    hdrs = ["y.h"],
    deps = [":y"],
    alwayslink = True,
)

cc_library(
    name = "alwayslink_header_only_implementation_deps",
    hdrs = ["y.h"],
    implementation_deps = [":y"],
    alwayslink = True,
)

cc_library(
    name = "alwayslink_linkstatic_header_only",
    hdrs = ["y.h"],
    linkstatic = True,
    deps = [":y"],
    alwayslink = True,
)
