load("@rules_nasm//nasm:nasm_cc_library.bzl", "nasm_cc_library")
load("@rules_nasm//nasm:nasm_library.bzl", "nasm_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

NASM_FLAGS = [
    "-w+all",
    "-D__x86_64__",
    "-felf64",
    "-DELF",
    "-DPIC",
]

nasm_library(
    name = "asm_library",
    srcs = [
        "a.asm",
    ],
    copts = [
        "-w+all",
        "-D__x86_64__",
        "-DELF",
        "-DPIC",
    ],
    includes = [
        "include",
    ],
)

cc_library(
    name = "a",
    srcs = [
        "a.cc",
        ":asm_library",
    ],
    hdrs = ["a.h"],
    deps = [":asm_library"],
)

nasm_cc_library(
    name = "cc_library",
    srcs = ["a.asm"],
    hdrs = [
        "include/b.inc",
    ],
    copts = [
        "-s",
        "-w-macro-params-legacy",
        "-w-orphan-labels",
    ],
    includes = [
        "include",
    ],
    linkstatic = 1,
    alwayslink = 1,
)
