workspace(name = "third_party_http_archive_test_repo")

load("@tensorstore//bazel/repo_rules:third_party_http_archive.bzl", "third_party_http_archive")

third_party_http_archive(
    name = "net_sourceforge_half",
    bazel_to_cmake = {},
    build_file = Label("//:half.BUILD.bazel"),
    cmake_name = "half",
    cmake_package_aliases = ["Whole"],
    cmake_target_mapping = {
        "@net_sourceforge_half//:half": "half::half",
    },
    cmakelists_prefix = "# << prefix >>",
    cmakelists_suffix = "# << suffix >>",
    sha256 = "ad1788afe0300fa2b02b0d1df128d857f021f92ccf7c8bddd07812685fa07a25",
    urls = [
        "https://storage.googleapis.com/tensorstore-bazel-mirror/sourceforge.net/projects/half/files/half/2.1.0/half-2.1.0.zip",
        "https://sourceforge.net/projects/half/files/half/2.1.0/half-2.1.0.zip",
    ],
)
